--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -37,8 +37,10 @@ jobs:
     - name: export-solution action
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        environment-url: 'https://rucarval.crm4.dynamics.com/'
-        user-name: 'appuser@dynfteemea.onmicrosoft.com'
+        environment-url: ${{env.ENVIRONMENT_URL}}
+        app-id: ${{env.CLIENT_ID}}
+        client-secret: ${{ secrets.secret }}
+        tenant-id: ${{env.TENANT_ID}}
         password-secret: ${{ secrets.secret }}
         solution-name: Layer2SecRoles
         solution-output-file: out/exported/Layer2SecRoles.zip
