--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -25,17 +25,30 @@ jobs:
     - uses: actions/checkout@v2
       with:
         lfs: true
+        
+# WhoAmI action working:
+#    - name: who-am-i action
+#      uses: microsoft/powerplatform-actions/who-am-i@v0
+#      with:
+#        environment-url: ${{env.ENVIRONMENT_URL}}
+#        app-id: ${{env.CLIENT_ID}}
+#        client-secret: ${{ secrets.secret }}
+#        tenant-id: ${{env.TENANT_ID}}
 
-    - name: who-am-i action
-      uses: microsoft/powerplatform-actions/who-am-i@v0
-      with:
-        environment-url: ${{env.ENVIRONMENT_URL}}
-        app-id: ${{env.CLIENT_ID}}
-        client-secret: ${{ secrets.secret }}
-        tenant-id: ${{env.TENANT_ID}}
+#exporting action working:
+#    - name: export-solution action
+#      uses: microsoft/powerplatform-actions/export-solution@v0
+#      with:
+#        environment-url: ${{env.ENVIRONMENT_URL}}
+#        app-id: ${{env.CLIENT_ID}}
+#        client-secret: ${{ secrets.secret }}
+#        tenant-id: ${{env.TENANT_ID}}
+#        password-secret: ${{ secrets.secret }}
+#        solution-name: Layer2SecRoles
+#        solution-output-file: out/exported/Layer2SecRoles.zip
 
-    - name: export-solution action
-      uses: microsoft/powerplatform-actions/export-solution@v0
+    - name: Export Solution
+      uses: microsoft/powerplatform-actions/export-solution@v0.7.1
       with:
         environment-url: ${{env.ENVIRONMENT_URL}}
         app-id: ${{env.CLIENT_ID}}
@@ -43,7 +56,9 @@ jobs:
         tenant-id: ${{env.TENANT_ID}}
         password-secret: ${{ secrets.secret }}
         solution-name: Layer2SecRoles
-        solution-output-file: out/exported/Layer2SecRoles.zip
+        solution-output-file: 'test.zip'
+        working-directory: 'out'
+        managed: true
 
 #    - name: unpack-solution action
 #      uses: microsoft/powerplatform-actions/unpack-solution@v0
